[gd_scene load_steps=6 format=3 uid="uid://kvro356qmfja"]

[ext_resource type="Script" path="res://Scripts/endscene.gd" id="1_j3ooi"]
[ext_resource type="Texture2D" uid="uid://prml0nxqtrdo" path="res://endscene design/endscene.png" id="1_rxx1q"]
[ext_resource type="Texture2D" uid="uid://byr84sgmvkivn" path="res://endscene design/back to gundlage island.png" id="2_n772g"]
[ext_resource type="Texture2D" uid="uid://dp48f6feymru4" path="res://endscene design/back to EIS island.png" id="4_8eot2"]
[ext_resource type="Texture2D" uid="uid://dnbp118a0o8gl" path="res://endscene design/back to LAVA island.png" id="5_bylfy"]

[node name="Endscene" type="Node2D"]
script = ExtResource("1_j3ooi")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1159.0
offset_bottom = 651.0
texture = ExtResource("1_rxx1q")

[node name="Label" type="Label" parent="."]
offset_left = 58.0
offset_top = 78.0
offset_right = 393.0
offset_bottom = 164.0
theme_override_colors/font_color = Color(0.761318, 0.450069, 7.70092e-07, 1)
theme_override_font_sizes/font_size = 50
text = "TOTAL PUNKT"

[node name="button1" type="Button" parent="Label"]
layout_mode = 0
offset_left = 2.0
offset_top = 161.0
offset_right = 311.0
offset_bottom = 200.0

[node name="TextureRect" type="TextureRect" parent="Label/button1"]
layout_mode = 0
offset_left = -10.0
offset_top = -5.0
offset_right = 327.0
offset_bottom = 45.0
texture = ExtResource("2_n772g")

[node name="button2" type="Button" parent="Label"]
offset_left = 2.0
offset_top = 237.0
offset_right = 311.0
offset_bottom = 276.0

[node name="TextureRect" type="TextureRect" parent="Label/button2"]
layout_mode = 0
offset_left = -11.0
offset_top = -8.0
offset_right = 326.0
offset_bottom = 42.0
texture = ExtResource("4_8eot2")

[node name="button3" type="Button" parent="Label"]
offset_top = 313.0
offset_right = 309.0
offset_bottom = 352.0

[node name="TextureRect" type="TextureRect" parent="Label/button3"]
layout_mode = 0
offset_left = -13.0
offset_top = -7.0
offset_right = 324.0
offset_bottom = 43.0
texture = ExtResource("5_bylfy")

[node name="button4" type="Button" parent="Label"]
offset_left = -3.0
offset_top = 385.0
offset_right = 306.0
offset_bottom = 424.0

[node name="TextureRect" type="TextureRect" parent="Label/button4"]
layout_mode = 0
offset_left = -12.0
offset_top = -6.0
offset_right = 325.0
offset_bottom = 44.0
texture = ExtResource("4_8eot2")

[connection signal="button_down" from="Label/button1" to="." method="_on_button_1_button_down"]
[connection signal="button_down" from="Label/button2" to="." method="_on_button_2_button_down"]
[connection signal="button_down" from="Label/button2" to="." method="_on_button_1_button_down"]
[connection signal="button_down" from="Label/button3" to="." method="_on_button_2_button_down"]
[connection signal="button_down" from="Label/button3" to="." method="_on_button_1_button_down"]
[connection signal="button_down" from="Label/button3" to="." method="_on_button_3_button_down"]
[connection signal="button_down" from="Label/button4" to="." method="_on_button_2_button_down"]
[connection signal="button_down" from="Label/button4" to="." method="_on_button_1_button_down"]
[connection signal="button_down" from="Label/button4" to="." method="_on_button_4_button_down"]
